# obs-bilibili-live

./: CMakeLists.txt  vcpkg.json
.github/workflows/: build.yml
locale/: zh-CN.ini
src/: bilibili_api.cpp  bilibili_api.h  obs_ui.cpp  plugin.cpp  plugin_state.h
